// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders default snapshot 1`] = `
<DocumentFragment>
  <div
    class="checkbox-item"
  >
    <input
      id="checkbox-id-0"
      type="checkbox"
      value=""
    />
    <label
      for="checkbox-id-0"
    >
      foo
    </label>
    <svg
      class="svg-inline--fa fa-check"
    />
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders snapshot with all props 1`] = `
<DocumentFragment>
  <div
    class="checkbox-item"
  >
    <input
      checked=""
      disabled=""
      id="baz"
      type="checkbox"
      value="bar"
    />
    <label
      for="baz"
    >
      foo
    </label>
    <svg
      class="svg-inline--fa fa-check"
    />
  </div>
</DocumentFragment>
`;
